# pyawabi

./: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  test.yml
src/: lib.rs
tests/: __init__.py
