[package]
name = "pyawabi"
version = "0.1.1"
authors = ["Hajime Nakagami <nakagami@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A python wrapper for awabi"
repository = "https://github.com/nakagami/pyawabi"
readme = "README.md"
keywords = ["mecab", "awabi"]

[lib]
name = "pyawabi"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11"
features = ["extension-module"]

[dependencies]
awabi = "0.2.1"
