[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyawabi"
version = "0.3.0"
description = "A morphological analyzer using mecab dictionary."
readme = "README.md"
authors = [
    {name = "Hajime Nakagami", email = "nakagami@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
]
keywords = ["MeCab"]
urls = {Homepage = "http://github.com/nakagami/pyawabi/"}

[project.scripts]
pyawabi = "pyawabi.pyawabi:main"

[tool.setuptools]
zip-safe = false
packages = ["pyawabi"]

[tool.setuptools-rust]
rust_extensions = [
    {target = "pyawabi.awabi", path = "Cargo.toml"}
]
